objects/QIDC__MDM_SQS_Caching_ims__c.object
<CustomObject>
    <description>This Object is used for Storing Data from SQS</description>
    <fields>
        <fullName>QIDC__Entity_SFID_ims__c</fullName>
        <description>This field is used to store Entity SFDC ID</description>
        <inlineHelpText>This field is used to store Entity SFDC ID</inlineHelpText>
        <label>Entity SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Entity_URI_ims__c</fullName>
        <description>This field is used to store the MDM entity URI</description>
        <inlineHelpText>This field is used to store the MDM entity URI</inlineHelpText>
        <label>Entity URI</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Event_Type_ims__c</fullName>
        <description>This field is used to store the MDM event type.</description>
        <inlineHelpText>This field is used to store the MDM event type.</inlineHelpText>
        <label>Event Type</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__IsError_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to maintain the error record in download</description>
        <inlineHelpText>This flag is used to maintain the error record in download</inlineHelpText>
        <label>IsError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Last_Updated_Time_ims__c</fullName>
        <description>This field is used to store the entity updated time in MDM</description>
        <inlineHelpText>This field is used to store the entity updated time in MDM</inlineHelpText>
        <label>Last Updated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Relationship_Type_URI_ims__c</fullName>
        <description>This field is used to store the MDM relationship type URI.</description>
        <inlineHelpText>This field is used to store the MDM relationship type URI.</inlineHelpText>
        <label>Relationship Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Response_JSON_ims__c</fullName>
        <description>This field is used to store the Response JSON in delta download.</description>
        <inlineHelpText>This field is used to store the Response JSON in delta download.</inlineHelpText>
        <label>Response JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>MDM_SQS_Caching</label>
    <listViews>
        <fullName>MDR_Queue_MDM_SQS_Caching_ims</fullName>
        <filterScope>Queue</filterScope>
        <label>MDR Queue</label>
        <queue>MDR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Entity_URI_ims__c</columns>
        <columns>QIDC__Event_Type_ims__c</columns>
        <columns>QIDC__Last_Updated_Time_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QIDC__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SQS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_SQS_Cachings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>